...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1jo-aU-Vkl">
                                <rect key="frame" x="10" y="174" width="300" height="220"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="oBZ-bb-MOm">
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsK-FU-mFN">
                                                <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hDS-KU-234">
...
                                    <constraint firstAttribute="trailing" secondItem="5GO-ae-tof" secondAttribute="trailing" id="zIa-7l-oZZ"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VMK-bi-sAJ">
                                <rect key="frame" x="117" y="425" width="86" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Bestätigen"/>
                                <connections>
                                    <action selector="onSubmitTap" destination="TnP-e2-hGv" eventType="touchUpInside" id="jfb-MM-iom"/>
                                    <segue destination="BYZ-38-t0r" kind="show" customClass="SegueFromLeft" customModule="QuitSmoking" customModuleProvider="target" id="cbx-KT-gcD"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qr0-Nw-jSs">
...
                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="26" id="r7D-io-Hpp"/>
                                </constraints>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="28"/>
                                <state key="normal" image="BackImage"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" customClass="SegueFromLeft" customModule="QuitSmoking" customModuleProvider="target" id="wTu-mZ-hHv"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Back" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TaV-cn-iU6">
                                <rect key="frame" x="29" y="38" width="38" height="20"/>
...
                                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="100" id="RJM-em-tNX"/>
                                                    <constraint firstAttribute="width" constant="100" id="Sua-TM-7Zx"/>
                                                </constraints>
                                                <state key="normal" image="AddCigarrette"/>
                                                <connections>
                                                    <action selector="addCigaretteButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ULC-9a-lvp"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Cigarette" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RoV-h4-FFu">
                                                <rect key="frame" x="0.0" y="100" width="100" height="18"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vAz-9R-QKu">
                                <rect key="frame" x="269" y="35" width="35" height="35"/>
                                <accessibility key="accessibilityConfiguration">
                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="28"/>
                                <state key="normal" image="UserSettingsImage"/>
                                <connections>
                                    <segue destination="TnP-e2-hGv" kind="show" customClass="SegueFromRight" customModule="QuitSmoking" customModuleProvider="target" id="2Bv-cq-qVp"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="42m-Fm-pBn" userLabel="Statistics">
                                <rect key="frame" x="272" y="78" width="30" height="30"/>
...
